--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Testtitel2.html</title>
+    <title>Neuer Titel 2</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="icon" href="images/favicon.png" />
   </head>
@@ -14,7 +14,8 @@
     <script src="js/scripts.js"></script>
   </h2>
   </h3>
-  </h4>
-  </h5>
-  </h6>
+  <h3>
+  <h4>
+  <h5>
+  <h6>
 </html>
